--- a/package.json
+++ b/package.json
@@ -43,11 +43,14 @@
     "react-dom": ">=16.8.0"
   },
   "dependencies": {
-    "@types/prismjs": "1.16.0",
     "@babel/runtime": "7.9.2",
+    "@types/prismjs": "1.16.0",
     "classnames": "2.2.6",
+    "prism-react-renderer": "^1.1.1",
     "prismjs": "1.20.0",
-    "react-markdown": "4.3.1"
+    "react-jsx-parser": "^1.25.1",
+    "react-markdown": "4.3.1",
+    "styled-components": "^5.1.1"
   },
   "devDependencies": {
     "@kkt/loader-less": "5.8.0",
@@ -55,6 +58,7 @@
     "@types/classnames": "2.2.10",
     "@types/react": "16.9.34",
     "@types/react-dom": "16.9.6",
+    "@types/styled-components": "^5.1.1",
     "@uiw/react-github-corners": "1.1.3",
     "@uiw/react-shields": "1.1.0",
     "@uiw/reset.css": "1.0.4",
